cluster/k8s/vault-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "${LETSENCRYPT_ISSUER}"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.allegedly.works
      secretName: vault-ingress-tls
  rules:
    - host: vault.allegedly.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: instance
                port:
                  number: 8200
